--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rahul Maddeshiya </span><br>
                 </h1>
 
-                <a href="#" class="button">My CV</a>
+             <a href="https://drive.google.com/file/d/1JMjV5hHUzO6mpwGJwxmHj6c2Zvo0gPbU/view?usp=sharing"
+                    target="_blank" class="button">My CV</a>
             </div>
 
             <div class="home__social">
