--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div>
                     <h2 class="about__subtitle"> </h2>
                     <p class="about__text" > I know data structure and algorithm and I am also interest in competitive
-                        programming,Other than that i know basic of fronted devlopment,Java , SQL language and object
+                        programming,Other than that i know basic of fronted,Java , SQL language and object
                         oriented programming. </p>
                 </div>
             </div>
