--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                 <div>
                     <h2 class="about__subtitle"> </h2>
-                    <p class="about__text" > I know data structure and algorithm and I am also interest in competitive
+                    <p class="about__text" >  I am fresher computer science engineer.I know data structure and algorithm in Cpp language and I am also interest in competitive
                         programming,Other than that i know basic of fronted,Java , SQL language and object
                         oriented programming. </p>
                 </div>
