--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rahul Maddeshiya </span><br>
                 </h1>
 
-             <a href="https://drive.google.com/file/d/1JMjV5hHUzO6mpwGJwxmHj6c2Zvo0gPbU/view?usp=sharing"
+             <a href=""
                     target="_blank" class="button">My CV</a>
             </div>
 
