--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">Work Experience</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">Coding Profile</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Project</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
@@ -39,41 +40,37 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rahul Maddeshiya </span><br>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rahul Maddeshiya </span> Engineering
+                    Grad'2023<br>
                 </h1>
 
-             <a href=""
+                <a href=""
                     target="_blank" class="button">My CV</a>
             </div>
 
             <div class="home__social">
-               
-                <!-- <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a> -->
-                <!-- <a href="https://github.com/Rahul6599" class="home__social-icon"><i class='bx bxl-github'></i></a> -->
-            </div>
 
-            <!-- <div class="home__img">
-                <img src="rahpic.png" alt="">
-            </div> -->
+
+            </div>
         </section>
 
         <!--===== ABOUT =====-->
-        <section class="about section " id="about">
-            <h2 class="section-title">About</h2>
-
+        <section class="about section" id="about">
             <div class="about__container bd-grid">
-                <div class="about__img">
-                    <img src="newabout.png" alt="">
-                </div>
-
-                <div>
-                    <h2 class="about__subtitle"> </h2>
-                    <p class="about__text" >  I am fresher computer science engineer.I know data structure and algorithm in Cpp language and I am also interest in competitive
-                        programming,Other than that i know basic of fronted,Java , SQL language and object
-                        oriented programming. </p>
+                <div class="about__content">
+                    <h2 class="section-title">Experience</h2>
+                    <div>
+                        <h1 class="skills_subtitle"> SDE Intern @Desi QnA</h1>
+                        <p><strong> Period:</strong> Oct 2023 - Dec 2023  </p>
+                         <p><strong>Location:</strong> Remote, India</p>
+                        <p>• Worked on the Design and Development part of a fully responsive webpage for a particular section of Desi QnA.</p>
+                        <p>• Worked on User Verification/Authentication and engineering challenges of detecting and removing fake bots and posts.</p>
+                        <p>• Integrated Recaptcha with the website - Google Layer of Protection for websites.</p>
+                    </div>
                 </div>
             </div>
         </section>
+
 
         <!--===== SKILLS =====-->
         <section class="skills section" id="skills">
@@ -87,61 +84,61 @@
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxl-html5 skills__icon'></i> -->
-                            <span class="skills__name">Fronted Basic</span>
+                            <span class="skills__name">HTML | CSS | JS</span>
                         </div>
                         <div class="skills__bar skills__front">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">60%</span>
+                            <span class="skills__percentage"></span>
                         </div>
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxl-css3 skills__icon'></i> -->
-                            <span class="skills__name">Cpp</span>
+                            <span class="skills__name">C | C++ | Java </span>
                         </div>
                         <div class="skills__bar skills__cpp">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">90%</span>
+                            <span class="skills__percentage"></span>
                         </div>
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxl-java skills__icon'></i> -->
-                            <span class="skills__name">JAVA</span>
+                            <span class="skills__name">Git | Github </span>
                         </div>
                         <div class="skills__bar skills__java">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">50%</span>
+                            <span class="skills__percentage"></span>
                         </div>
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxs-paint skills__icon'></i> -->
-                            <span class="skills__name">DSA</span>
+                            <span class="skills__name">Problem-Solving </span>
                         </div>
                         <div class="skills__bar skills__dsa">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">90%</span>
+                            <span class="skills__percentage"></span>
                         </div>
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxs-paint skills__icon'></i> -->
-                            <span class="skills__name">SQL</span>
+                            <span class="skills__name">SQL | MYSQL</span>
                         </div>
                         <div class="skills__bar skills__sql">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">75%</span>
+                            <span class="skills__percentage"></span>
                         </div>
                     </div>
                 </div>
@@ -152,16 +149,37 @@
             </div>
         </section>
 
+        <!---==Coding=====-->
+
+        <section class="work section" id="work">
+            <h2 class="section-title">Coding Profile</h2>
+
+            <div class="work__container bd-grid">
+
+                <h1><a href="https://leetcode.com/Rahul6599/" target="_blank" class="project-link">LeetCode </a> </h1>
+                <h1>
+                    <a href="https://www.codechef.com/users/rahul6599" target="_blank" class="project-link">CodeChef</a>
+                </h1>
+            </div>
+        </section>
+
+
+
         <!--===== WORK =====-->
         <section class="work section" id="work">
             <h2 class="section-title">Project</h2>
 
             <div class="work__container bd-grid">
-                <h1><a href="https://github.com/Rahul6599/Snake-Game" target="_blank"  >1.Console based Snake Game using Cpp</a></h1>
 
-                <h1><a href="https://github.com/Rahul6599/Contact-Management-" target="_blank" >2.Console based Contact Management using Cpp</a></h1>
-
-                <h1><a href="" target="_blank" >3.Simple Portfolio UI using HTML and CSS</a></h1>
+                <h1><a href="https://rahul-portfolio-ui.netlify.app/" target="_blank" class="project-link">1.Portfolio Webpage</a>
+                </h1>
+                <h1>
+                    <a href="" target="_blank" class="project-link">2.Snake Game</a>
+                </h1>
+                <h1>
+                    <a href="https://1programming-quiz.netlify.app/" target="_blank" class="project-link">3.Programming
+                        Quiz Website </a>
+                </h1>
             </div>
         </section>
 
@@ -184,8 +202,10 @@
     <footer class="footer">
         <p class="footer__title"></p>
         <div class="footer__social">
-            <a href="https://www.linkedin.com/in/rahul-maddeshiya-828830202/" target="_blank" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/Rahul6599" target="_blank" class="footer__icon"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/rahul-maddeshiya-828830202/" target="_blank" class="footer__icon"><i
+                    class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/Rahul6599" target="_blank" class="footer__icon"><i
+                    class='bx bxl-github'></i></a>
             <!-- <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a> -->
         </div>
         <!-- <p>&#169; 2022 copyright all right reserved</p> -->
