--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Grad'2023<br>
                 </h1>
 
-                <a href=""
+                <a href="https://drive.google.com/file/d/1MzZlvIuYyGGPvyeNlHLd3KEjfTuYSfXq/view?usp=drive_link"
                     target="_blank" class="button">My CV</a>
             </div>
 
